<resources>
    <string name="app_name">Trinity Wizards Test App</string>

    <string name="text_contacts">Contacts</string>

    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>

    <string name="text_main_information">Main Information</string>
    <string name="text_first_name">First Name</string>
    <string name="text_first_name_error">First Name cannot be empty!</string>
    <string name="text_first_name_hint">Enter First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_last_name_error">Last Name cannot be empty!</string>
    <string name="text_last_name_hint">Enter Last Name</string>

    <string name="text_sub_information">Sub Information</string>
    <string name="text_email">Email</string>
    <string name="text_email_error">Email cannot be empty!</string>
    <string name="text_email_hint">Enter Email</string>
    <string name="text_dob">DOB</string>
    <string name="text_dob_error">Date of Birth cannot be empty!</string>
    <string name="text_dob_hint">Enter Date of Birth</string>
</resources>