<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/tvEditContactCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_cancel"
                android:textColor="@color/test_color"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvEditContactSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_save"
                android:textColor="@color/test_color"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/vvDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvEditContactCancel"/>

            <ImageView
                android:id="@+id/ivContactPicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/test_color"
                app:layout_constraintTop_toBottomOf="@id/vvDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvMainInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_main_information"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ivContactPicture"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/vvMainDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvMainInformation"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.32"/>

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_first_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/vvMainDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/glMain"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:hint="@string/text_first_name_hint"
                app:layout_constraintTop_toBottomOf="@id/vvMainDivider"
                app:layout_constraintStart_toEndOf="@id/glMain"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/vvFirstNameDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName"/>

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_last_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/vvFirstNameDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/glMain"/>

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:hint="@string/text_last_name_hint"
                app:layout_constraintTop_toBottomOf="@id/vvFirstNameDivider"
                app:layout_constraintStart_toEndOf="@id/glMain"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/vvLastNameDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvLastName"/>

            <TextView
                android:id="@+id/tvSubInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_sub_information"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/vvLastNameDivider"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/vvSubDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvSubInformation"/>

            <TextView
                android:id="@+id/tvContactEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_email"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/vvSubDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/glMain"/>

            <EditText
                android:id="@+id/etContactEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:hint="@string/text_email_hint"
                app:layout_constraintTop_toBottomOf="@id/vvSubDivider"
                app:layout_constraintStart_toEndOf="@id/glMain"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/vvEmailDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvContactEmail"/>

            <TextView
                android:id="@+id/tvDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_dob"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/vvEmailDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/glMain"/>

            <EditText
                android:id="@+id/etDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:hint="@string/text_dob_hint"
                app:layout_constraintTop_toBottomOf="@id/vvEmailDivider"
                app:layout_constraintStart_toEndOf="@id/glMain"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/vvDOBDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvDateOfBirth"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>